--- a/CustomRPC/About.pa.resx
+++ b/CustomRPC/About.pa.resx
@@ -128,6 +128,6 @@
     <value>ਬੰਦ ਕਰੋ</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>ਬਾਰੇ</value>
+    <value>ਪ੍ਰੋਗਰਾਮ ਬਾਰੇ</value>
   </data>
 </root>
