--- a/CustomRPC/Strings.pa.resx
+++ b/CustomRPC/Strings.pa.resx
@@ -118,70 +118,70 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="error" xml:space="preserve">
-    <value>ਗੜਬੜ</value>
+    <value>ਗਲਤੀ</value>
   </data>
   <data name="errorNoID" xml:space="preserve">
-    <value>ਕੋਈ ID ਨਿਰਧਾਰਤ ਨਹੀਂ ਕੀਤੀ ਗਈ!</value>
+    <value>ID ਦਰਜ ਨਹੀਂ ਕੀਤਾ ਗਿਆ!</value>
   </data>
   <data name="errorUpdateFailed" xml:space="preserve">
-    <value>ਅੱਪਡੇਟ ਨੂੰ ਡਾਊਨਲੋਡ ਕਰਨ ਵਿੱਚ ਇੱਕ ਸਮੱਸਿਆ ਸੀ।
-ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰਨ ਲਈ "ਹਾਂ" ਦਬਾਓ ਜਾਂ ਹੱਥੀਂ ਡਾਊਨਲੋਡ ਕਰਨ ਲਈ "ਨਹੀਂ" ਦਬਾਓ।</value>
+    <value>ਅਪਡੇਟ ਡਾਊਨਲੋਡ ਕਰਨ ਜਾਂ ਸਥਾਪਨ ਕਰਨ ਵਿਚ ਗਲਤੀ ਹੋਈ।
+ਮੁੜ "Yes" ਤੇ ਕਲਿੱਕ ਕਰੋ ਜਾਂ "No" ਤੇ ਕਲਿੱਕ ਕਰੋ ਅਤੇ ਸੁਖਾਲੀ ਕਰਨ ਲਈ ਦਸ਼ਾਂਤਰ ਵਰਤੋ।</value>
   </data>
   <data name="firstTimeRun" xml:space="preserve">
-    <value>ਮਦਦ ਦੀ ਲੋੜ ਹੈ?</value>
+    <value>ਮਦਦ ਚਾਹੀਦੀ ਹੈ?</value>
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
-    <value>ਕੀ ਤੁਸੀਂ ਮੈਨੂਅਲ ਖੋਲ੍ਹਣਾ ਚਾਹੋਗੇ?
-ਤੁਸੀਂ ਇਸ ਨੂੰ ਕਿਸੇ ਵੀ ਸਮੇਂ ਹੈਲਪ -&gt; ਮੈਨੂਅਲ ਖੋਲ੍ਹੋ ਜਾਂ F1 ਦਬਾ ਕੇ ਖੋਲ੍ਹ ਸਕਦੇ ਹੋ।</value>
+    <value>"ਕੀ ਤੁਸੀਂ ਮਾਨੁਅਲ ਖੋਲਣ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?
+ਤੁਸੀਂ ਕਦੇ ਵੀ ਮਦਦ ਵਿੱਚ Help -&gt; ਮੈਨੁਅਲ ਖੋਲੋ ਜਾਂ F1 ਦਬਾ ਕੇ ਖੋਲ ਸਕਦੇ ਹੋ।"</value>
   </data>
   <data name="information" xml:space="preserve">
     <value>ਜਾਣਕਾਰੀ</value>
   </data>
   <data name="statusConnected" xml:space="preserve">
-    <value>ਕਨੈਕਟ ਹੋ ਗਿਆ ਹੈ</value>
+    <value>ਕੁਨੈਕਟ</value>
   </data>
   <data name="statusConnecting" xml:space="preserve">
-    <value>ਕਨੈਕਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ...</value>
+    <value>ਕੁਨੈਕਟ ਕਰ ਰਿਹਾ ਹੈ...</value>
   </data>
   <data name="statusConnectionFailed" xml:space="preserve">
-    <value>ਕਨੈਕਸ਼ਨ ਅਸਫਲ ਹੋਇਆ (ਕੀ ਡਿਸਕਾਰਡ ਚੱਲ ਰਿਹਾ ਹੈ?)</value>
+    <value>ਕੁਨੈਕਟ ਫੇਲ ਹੋਇਆ (ਕੀ ਡਿਸਕਨੈਕ ਚਾਲ ਰਿਹਾ ਹੈ?)</value>
   </data>
   <data name="statusDisconnected" xml:space="preserve">
-    <value>ਡਿਸਕਨੈਕਟ ਹੋ ਗਿਆ ਹੈ</value>
+    <value>ਡਿਸਕਨੈਕਟ</value>
   </data>
   <data name="statusError" xml:space="preserve">
-    <value>ਕਨੈਕਸ਼ਨ ਗੜਬੜ (ਗਲਤ ID?)</value>
+    <value>ਕੁਨੈਕਟ਼ਨ ਗਲਤੀ (ਗਲਤ ID?)</value>
   </data>
   <data name="errorInvalidURL" xml:space="preserve">
-    <value>ਬਟਨ(ਨਾਂ) ਲਈ ਅਵੈਧ URL ਨਿਰਧਾਰਤ ਕੀਤਾ ਗਿਆ ਹੈ ਜਾਂ ਟੈਕਸਟ ਬਹੁਤ ਲੰਮਾ ਹੈ!</value>
+    <value>ਬਟਨਾਂ ਲਈ ਅਥਾਹ ਯੂਆਰਐਲ ਦਾ ਨਾਮ ਜਾਂ ਵਧੀਕ ਟੈਕਸਟ ਦਰਜ ਕੀਤਾ ਗਿਆ ਹੈ!</value>
   </data>
   <data name="errorNoInternet" xml:space="preserve">
-    <value>ਇੰਟਰਨੈੱਟ ਨਾਲ ਕਨੈਕਟ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ!</value>
+    <value>ਇੰਟਰਨੈਟ ਨਾਲ ਕੁਨੈਕਟ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ!</value>
   </data>
   <data name="noUpdatesFound" xml:space="preserve">
-    <value>ਕੋਈ ਅੱਪਡੇਟ ਨਹੀਂ ਮਿਲੇ!</value>
+    <value>ਕੋਈ ਅੱਪਡੇਟ ਨਹੀਂ ਮਿਲੀ!</value>
   </data>
   <data name="errorCorruptSettings" xml:space="preserve">
     <value>ਸੈਟਿੰਗਜ਼ ਫਾਈਲ ਨਿਕਾਰਾ ਹੈ।
 ਸੈਟਿੰਗਾਂ ਨੂੰ ਰੀਸੈਟ ਕਰਨ ਲਈ ਹਾਂ ਦਬਾਓ, ਬੰਦ ਕਰਨ ਲਈ ਨਹੀਂ ਦਬਾਓ।</value>
   </data>
   <data name="errorInvalidPresetFile" xml:space="preserve">
-    <value>ਪ੍ਰੀਸੈਟ ਆਯਾਤ ਕਰਨ ਵਿੱਚ ਅਸਫਲ; ਫਾਈਲ ਜਾਂ ਤਾਂ ਗੁੰਮ ਹੈ, ਖਰਾਬ ਹੈ, ਜਾਂ ਸਹੀ ਢੰਗ ਨਾਲ ਫਾਰਮੈਟ ਨਹੀਂ ਕੀਤੀ ਗਈ ਹੈ।</value>
+    <value>ਪ੍ਰੀਸੈਟ ਦਾ ਆਯਾਤ ਕਰਨ ਵਿੱਚ ਅਸਮਰੱਥ; ਫਾਇਲ ਗੁਆਈ ਜਾਂ, ਕੋਰੁਪਟ ਜਾਂ ਸਹੀ ਤਰੀਕੇ ਨਾਲ ਫਾਰਮੈਟ ਨਹੀਂ ਕੀਤਾ ਗਿਆ।</value>
   </data>
   <data name="askAnalyticsConsent" xml:space="preserve">
-    <value>ਕੀ ਤੁਸੀਂ CustomRP ਨੂੰ ਡਿਵੈਲਪਰ ਨੂੰ ਤੁਹਾਡੇ ਵਰਤੋਂ ਵਿਸ਼ਲੇਸ਼ਣ ਭੇਜਣ ਦੀ ਇਜਾਜ਼ਤ ਦਿੰਦੇ ਹੋ?
-(ਸਾਰਾ ਡੇਟਾ ਵਿਅਕਤੀਗਤ ਬਣਾਇਆ ਗਿਆ ਹੈ।)</value>
+    <value>ਕੀ ਤੁਸੀਂ ਦੇਣ ਦੇਣ ਦਾ ਅਨੁਮਤੀ ਦਿਵਾਉਣੀ ਹੈ ਕਿ CustomRP ਵਿਕਸ਼ਲਨ ਸੱਦਾਂ ਨੂੰ ਵਿਕਸ਼ਿਪਕ ਦੇਣ ਲਈ?
+(ਸਾਰੇ ਡੇਟਾ ਵਿਅਕਤਗਤ ਬਣਾਇਆ ਜਾਂਦਾ ਹੈ।)</value>
   </data>
   <data name="errorSavingSettings" xml:space="preserve">
-    <value>ਸੈਟਿੰਗਾਂ ਨੂੰ ਸੁਰੱਖਿਅਤ ਕਰਨ ਦੌਰਾਨ ਇੱਕ ਤਰੁੱਟੀ ਉਤਪੰਨ ਹੋਈ:</value>
+    <value>ਸੈਟਿੰਗਾਂ ਸੰਭਾਲਣ ਦੌਰਾਨ ਗਲਤੀ ਹੋਈ:</value>
   </data>
   <data name="errorLoadingAssembly" xml:space="preserve">
-    <value>ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ ਐਂਟੀਵਾਇਰਸ ਦੇ ਅਪਵਾਦਾਂ ਵਿੱਚ "{0}" ਮਾਰਗ ਸ਼ਾਮਲ ਕਰੋ। ਜੇਕਰ ਇਹ ਤਰੁੱਟੀ ਬਣੀ ਰਹਿੰਦੀ ਹੈ ਤਾਂ CustomRP ਨੂੰ ਮੁੜ ਸਥਾਪਿਤ ਕਰੋ.</value>
+    <value>ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ ਏਂਟੀਵਾਇਰਸ ਦੇ ਬਿਨਾਂਨਾਂ ਸਮੱਸਿਆਵਾਂ ਵਿੱਚ "{0}" ਪਾਥ ਸ਼ਾਮਲ ਕਰੋ। ਯਦਿ ਇਹ ਗਲਤੀ ਬਣੀ ਰਹੀ ਹੈ ਤਾਂ CustomRP ਨੂੰ ਮੁੜ ਸਥਾਪਿਤ ਕਰੋ।</value>
   </data>
   <data name="errorInvalidImageURL" xml:space="preserve">
-    <value>ਚਿੱਤਰ URL ਬਹੁਤ ਲੰਮਾ ਹੈ!</value>
+    <value>ਚਿੱਤਰ ਦੀ URL ਖੋਜਣ ਲਈ ਗੁਆਈ ਹੈ!</value>
   </data>
   <data name="errorStartupShortcut" xml:space="preserve">
-    <value>ਇੱਕ ਸ਼ੁਰੂਆਤੀ ਸ਼ਾਰਟਕੱਟ ਜੋੜਨ ਜਾਂ ਹਟਾਉਣ ਵਿੱਚ ਅਸਫਲ:</value>
+    <value>ਸਟਾਰਟਅੱਪ ਸ਼ਾਰਟਕਟ ਜੋੜਨ ਜਾਂ ਹਟਾਉਣ ਵਿੱਚ ਅਸਫਲ:</value>
   </data>
 </root>
