--- a/CustomRPC/UpdatePrompt.pa.resx
+++ b/CustomRPC/UpdatePrompt.pa.resx
@@ -121,20 +121,20 @@
     <value>ਹਾਂ</value>
   </data>
   <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>ਹਾਲੇ ਨਹੀਂ</value>
+    <value>ਹੁਣ ਨਹੀਂ</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 14</value>
+    <value>188, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>ਕੀ ਤੁਸੀਂ ਇਸ ਅੱਪਡੇਟ ਨੂੰ ਡਾਊਨਲੋਡ ਕਰਨਾ ਚਾਹੋਗੇ?</value>
+    <value>ਕੀ ਤੁਸੀਂ ਇਹ ਅੱਪਡੇਟ ਡਾਊਨਲੋਡ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 18</value>
+    <value>124, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>ਅਪਡੇਟਾਂ ਦੀ ਦੁਬਾਰਾ ਜਾਂਚ ਨਾ ਕਰੋ</value>
+    <value>ਅੱਪਡੇਟਾਂ ਲਈ ਜਾਂਚ ਨਾ ਕਰੋ</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>ਮੌਜੂਦਾ ਸੰਸਕਰਣ:
