--- a/CustomRPC/About.hi.resx
+++ b/CustomRPC/About.hi.resx
@@ -121,7 +121,7 @@
     <value>निर्मित द्वारा: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
-    <value>बंद करना</value>
+    <value>बंद करें</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>के बारे में</value>
