--- a/CustomRPC/UpdatePrompt.hi.resx
+++ b/CustomRPC/UpdatePrompt.hi.resx
@@ -121,7 +121,7 @@
     <value>हाँ</value>
   </data>
   <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>अभी नहीं</value>
+    <value>अब नहीं</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
@@ -134,7 +134,7 @@
     <value>159, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>अपडेट के लिए दोबारा जांच न करें</value>
+    <value>अपडेट की जाँच न करें</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>वर्तमान संस्करण:
@@ -144,9 +144,9 @@
     <value>111, 23</value>
   </data>
   <data name="buttonSkipUpdate.Text" xml:space="preserve">
-    <value>इस संस्करण को छोड़ दो</value>
+    <value>इस संस्करण को छोड़ें</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>उपलब्ध अद्यतन</value>
+    <value>अपडेट उपलब्ध है</value>
   </data>
 </root>
